# WattaVolt

./: .gitattributes  .gitmodules  LICENSE  README.md
fw/: .gitignore  CMakeLists.txt  flash.sh  memmap_app_in_ram_w_config.ld  memmap_w_config.ld  requirements.txt
fw/python/: calibrate_iout.py  device.py  io.py  plot.py  system_load.sh  utils.py
fw/src/: CMakeLists.txt  analog_readings.cpp  analog_readings.h  awaitable_mutex.h  buttons.cpp  buttons.h  display.cpp  light_animations.cpp  light_animations.h  logic.cpp  main.cpp  output.cpp  output.h  relais.cpp  task_utils.h  test.cpp  watchdog.cpp
fw/src/cranc/config/: ApplicationConfig.h
fw/src/cranc/coro/: Awaitable.h  SwitchToMainLoop.cpp  SwitchToMainLoop.h  Task.h
fw/src/cranc/msg/: MessagePump.cpp  MessagePump.h
fw/src/cranc/util/: LinkedList.h
fw/src/i2c/: CMakeLists.txt  i2c.cpp  i2c.h
fw/src/led/: CMakeLists.txt  led.cpp  ws2812.cpp  ws2812.h  ws2812.pio
fw/src/lvgl/: lv_conf.h
fw/src/malloc/: CMakeLists.txt  malloc.cpp  new_delete.cpp
fw/src/misc/: CMakeLists.txt  Heartbeat.cpp  Heartbeat_w.cpp  ISRTime.cpp  gpio_irq_multiplexing.cpp  gpio_irq_multiplexing.h  hwTimer.cpp  interrupt_active.h  systemTime.cpp  system_reset.cpp  usbCom.cpp  usb_cdc.cpp  usb_cdc.h
fw/src/persistent_config/: CMakeLists.txt  PersistentConfig.cpp  PersistentConfig.h  PersistentConfigFunctions.cpp
fw/src/usb/: CMakeLists.txt  dev_lowlevel.h  rp2040_usb_device_enumeration.cpp  rp2040_usb_device_enumeration.h  usb.cpp  usb.h  usb_common.h  usb_dev.h  usb_test_bulk.cpp_  usb_test_iso_in.cpp_
fw/src/util/: CMakeLists.txt  ChunkBuffer.h  Finally.h  Hash.h  ScaledNumber.h  SiLi-Quaternion.h  SiLi.h  hexlify.h  random.cpp  random.h  span_helpers.h
hw/: DAC.kicad_sch  I2C_bridge.kicad_sch  adc.kicad_sch  btns.kicad_sch  i2c_bridge_io.kicad_sch  isolated_dig_input.kicad_sch  isolated_io.kicad_sch  lib.kicad_sym  local_power.kicad_sch  mypsu.kicad_pcb  mypsu.kicad_pro  mypsu.kicad_sch  mypsu.step  output_stage.kicad_sch  power_stage.kicad_sch  pwr2uc.kicad_sch  pwr2uc_5_33.kicad_sch  requirements.txt  rp2040.kicad_sch  uc2pwr.kicad_sch  uc2pwr_33_33.kicad_sch  untitled.kicad_sch
hw/jlcpcb/: project.db
hw/lib.3dshapes/: CONN-SMD_3P-P1.00_HC-1.0-3PLT.step  CONN-SMD_3P-P1.00_HC-1.0-3PLT.wrl  CONN-TH_2P-P5.00_WJ500V-5.08-2P.step  CONN-TH_2P-P5.00_WJ500V-5.08-2P.wrl  DFN-8_L5.0-W6.0-H1.0-P1.27-LS6.1.step  DFN-8_L5.0-W6.0-H1.0-P1.27-LS6.1.wrl  IND-SMD_L17.5-W17.2-H7.0.step  IND-SMD_L17.5-W17.2-H7.0.wrl  RELAY-TH_L16.0-W12.4-H14.2-C.step  RELAY-TH_L16.0-W12.4-H14.2-C.wrl  RELAY-TH_L19.2-W15.6-H15.8.step  RELAY-TH_L19.2-W15.6-H15.8.wrl  SC-70-5_L2.1-W1.3-H1.0-LS2.1-P0.65.wrl  SOIC-8_L4.9-W3.9-H1.7-LS6.0-P1.27.wrl  SOP-8_L4.9-W3.9-P1.27-LS6.0-BL-1.step  SOP-8_L4.9-W3.9-P1.27-LS6.0-BL-1.wrl  SW-SMD_4P-L5.2-W5.2-H1.5-LS6.4-P3.70.step  USB-C-SMD_G-SWITCH_GT-USB-7010EN.step  (+2 more)
(+25 files in other folders)
